--- a/html/index.html
+++ b/html/index.html
@@ -34,31 +34,31 @@
     <div id="carousel" class="carousel slide m-auto w-50" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="images/trg.png" alt="First slide">
+          <img class="d-block w-100" src="images/one.png" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/trg.png" alt="Second slide">
+          <img class="d-block w-100" src="images/two.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/trg.png" alt="Third slide">
+          <img class="d-block w-100" src="images/three.png" alt="Third slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/trg.png" alt="Third slide">
+          <img class="d-block w-100" src="images/four.png" alt="Third slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/trg.png" alt="Third slide">
+          <img class="d-block w-100" src="images/five.png" alt="Third slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/trg.png" alt="Third slide">
+          <img class="d-block w-100" src="images/six.png" alt="Third slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/trg.png" alt="Third slide">
+          <img class="d-block w-100" src="images/seven.png" alt="Third slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/trg.png" alt="Third slide">
+          <img class="d-block w-100" src="images/eight.png" alt="Third slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/trg.png" alt="Third slide">
+          <img class="d-block w-100" src="images/nine.png" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
